--- a/app/views/events/organizer_tools/_operating_system_breakdown.erb
+++ b/app/views/events/organizer_tools/_operating_system_breakdown.erb
@@ -17,7 +17,7 @@
             <%= os.title %>
           </td>
           <td>
-            <%= count %> (<%= ((count.to_f / total) * 100) %>%)
+            <%= count %> (<%= number_with_precision(((count.to_f / total) * 100), precision: 2) %>%)
           </td>
         </tr>
       <% end %>
